--- a/package.json
+++ b/package.json
@@ -23,5 +23,9 @@
     "webpack": "^4.42.1",
     "webpack-cli": "^3.3.11",
     "webpack-dev-server": "^3.10.3"
+  },
+  "dependencies": {
+    "@babel/plugin-proposal-class-properties": "^7.8.3",
+    "prop-types": "^15.7.2"
   }
 }
